<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Senha" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center">

            <FrameLayout
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:elevation="4dp"
                android:foreground="?selectableItemBackground"
                android:textAlignment="center"                >

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal"
                    android:paddingLeft="80sp"
                    android:textAlignment="center"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/botaoLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:background="@drawable/sign_in_btn"
                        android:text="@string/login" />

                    <Button
                        android:id="@+id/botaoCadastrarLoginActivity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/sign_in_btn"
                        android:text="@string/cadastrar" />
                </LinearLayout>

            </FrameLayout>
        </RelativeLayout>


    </LinearLayout>

       <!-- <FrameLayout
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            android:background="@drawable/sign_in_btn"
            android:clickable="true"
            android:elevation="4dp"
            android:foreground="?selectableItemBackground"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:id="@+id/botaoTV"
                android:textColor="#ffffff"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />

        </FrameLayout>
        
        <view
            android:id="@+id/revealView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:visibility="invisible"/>-->
    </LinearLayout>
    <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Senha"
            android:id="@+id/senha"
            />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar"
                android:id="@+id/botaoCadastrarLoginActivity"
                />
        </LinearLayout>-->